--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/matchTabFragment">
-<!--    app:startDestination="@id/loginFragment">-->
+    app:startDestination="@id/loginFragment">
 
     <!--    <fragment-->
 <!--        android:id="@+id/userListFragment"-->
