--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -46,5 +46,10 @@
             android:id="@+id/to_groupCreationFragment"
             app:destination="@id/groupCreationFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/initialProfilePersonalizationFragment"
+        android:name="com.example.batchtest.InitialProfilePersonalizationFragment"
+        android:label="fragment_initial_profile_personalization"
+        tools:layout="@layout/fragment_initial_profile_personalization" />
 
 </navigation>
